improvement took care of the POST merchant creation endpoint - untested #10
